// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Legends snapShot testing renders Legends correctly 1`] = `
<div
  className=

      {
        align-items: center;
        margin-bottom: 0;
        margin-left: -8px;
        margin-right: 0;
        margin-top: -8px;
        white-space: nowrap;
        width: 100%;
      }
>
  <div>
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <div
        data-automation-id="visibleContent"
        style={
          Object {
            "position": "fixed",
            "visibility": "hidden",
          }
        }
      >
        <div
          aria-label="Legends"
          className=
              ms-FocusZone
              &:focus {
                outline: none;
              }
          data-focuszone-id="FocusZone0"
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          role="listbox"
        >
          <div
            className=
                ms-OverflowSet
                {
                  display: flex;
                  flex-wrap: wrap;
                  justify-content: unset;
                  position: relative;
                }
            role="group"
          >
            <div
              className=
                  ms-OverflowSet-item
                  {
                    display: inherit;
                    flex-shrink: 0;
                  }
              role="none"
            >
              <button
                aria-label="Legend 1 selected"
                aria-posinset={1}
                aria-selected={false}
                aria-setsize={2}
                className=

                    {
                      align-items: center;
                      background: none;
                      border: none;
                      cursor: pointer;
                      display: flex;
                      outline: transparent;
                      padding-bottom: 8px;
                      padding-left: 8px;
                      padding-right: 8px;
                      padding-top: 8px;
                      position: relative;
                      text-transform: capitalize;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid transparent;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #605e5c;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                    @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                      outline-color: #605e5c;
                    }
                data-is-focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                role="option"
              >
                <div
                  className=

                      {
                        background-color: #e81123;
                        border-color: #e81123;
                        border: 1px solid;
                        content: ;
                        height: 12px;
                        margin-right: 8px;
                        width: 12px;
                      }
                      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                        content: linear-gradient(to right, #e81123, #e81123);
                        opacity: ;
                      }
                />
                <div
                  className=

                      {
                        -moz-osx-font-smoothing: grayscale;
                        -webkit-font-smoothing: antialiased;
                        color: #323130;
                        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                        font-size: 12px;
                        font-weight: 400;
                        line-height: 16px;
                        opacity: ;
                      }
                >
                  Legend 1
                </div>
              </button>
            </div>
            <div
              className=
                  ms-OverflowSet-item
                  {
                    display: inherit;
                    flex-shrink: 0;
                  }
              role="none"
            >
              <button
                aria-label="Legend 2 selected"
                aria-posinset={2}
                aria-selected={false}
                aria-setsize={2}
                className=

                    {
                      align-items: center;
                      background: none;
                      border: none;
                      cursor: pointer;
                      display: flex;
                      outline: transparent;
                      padding-bottom: 8px;
                      padding-left: 8px;
                      padding-right: 8px;
                      padding-top: 8px;
                      position: relative;
                      text-transform: capitalize;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid transparent;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #605e5c;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                    @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                      outline-color: #605e5c;
                    }
                data-is-focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                role="option"
              >
                <div
                  className=

                      {
                        background-color: #000000;
                        border-color: #000000;
                        border: 1px solid;
                        content: ;
                        height: 12px;
                        margin-right: 8px;
                        width: 12px;
                      }
                      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                        content: linear-gradient(to right, #000000, #000000);
                        opacity: ;
                      }
                />
                <div
                  className=

                      {
                        -moz-osx-font-smoothing: grayscale;
                        -webkit-font-smoothing: antialiased;
                        color: #323130;
                        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                        font-size: 12px;
                        font-weight: 400;
                        line-height: 16px;
                        opacity: ;
                      }
                >
                  Legend 2
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Legends snapShot testing renders allowFocusOnLegends correctly 1`] = `
<div
  className=

      {
        align-items: center;
        margin-bottom: 0;
        margin-left: -8px;
        margin-right: 0;
        margin-top: -8px;
        white-space: nowrap;
        width: 100%;
      }
>
  <div>
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <div
        data-automation-id="visibleContent"
        style={
          Object {
            "position": "fixed",
            "visibility": "hidden",
          }
        }
      >
        <div
          aria-label="Legends"
          className=
              ms-FocusZone
              &:focus {
                outline: none;
              }
          data-focuszone-id="FocusZone1"
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          role="listbox"
        >
          <div
            className=
                ms-OverflowSet
                {
                  display: flex;
                  flex-wrap: wrap;
                  justify-content: unset;
                  position: relative;
                }
            role="group"
          >
            <div
              className=
                  ms-OverflowSet-item
                  {
                    display: inherit;
                    flex-shrink: 0;
                  }
              role="none"
            >
              <button
                aria-label="Legend 1 selected"
                aria-posinset={1}
                aria-selected={false}
                aria-setsize={2}
                className=

                    {
                      align-items: center;
                      background: none;
                      border: none;
                      cursor: pointer;
                      display: flex;
                      outline: transparent;
                      padding-bottom: 8px;
                      padding-left: 8px;
                      padding-right: 8px;
                      padding-top: 8px;
                      position: relative;
                      text-transform: capitalize;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid transparent;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #605e5c;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                    @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                      outline-color: #605e5c;
                    }
                data-is-focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                role="option"
              >
                <div
                  className=

                      {
                        background-color: #e81123;
                        border-color: #e81123;
                        border: 1px solid;
                        content: ;
                        height: 12px;
                        margin-right: 8px;
                        width: 12px;
                      }
                      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                        content: linear-gradient(to right, #e81123, #e81123);
                        opacity: ;
                      }
                />
                <div
                  className=

                      {
                        -moz-osx-font-smoothing: grayscale;
                        -webkit-font-smoothing: antialiased;
                        color: #323130;
                        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                        font-size: 12px;
                        font-weight: 400;
                        line-height: 16px;
                        opacity: ;
                      }
                >
                  Legend 1
                </div>
              </button>
            </div>
            <div
              className=
                  ms-OverflowSet-item
                  {
                    display: inherit;
                    flex-shrink: 0;
                  }
              role="none"
            >
              <button
                aria-label="Legend 2 selected"
                aria-posinset={2}
                aria-selected={false}
                aria-setsize={2}
                className=

                    {
                      align-items: center;
                      background: none;
                      border: none;
                      cursor: pointer;
                      display: flex;
                      outline: transparent;
                      padding-bottom: 8px;
                      padding-left: 8px;
                      padding-right: 8px;
                      padding-top: 8px;
                      position: relative;
                      text-transform: capitalize;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid transparent;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #605e5c;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                    @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                      outline-color: #605e5c;
                    }
                data-is-focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                role="option"
              >
                <div
                  className=

                      {
                        background-color: #000000;
                        border-color: #000000;
                        border: 1px solid;
                        content: ;
                        height: 12px;
                        margin-right: 8px;
                        width: 12px;
                      }
                      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                        content: linear-gradient(to right, #000000, #000000);
                        opacity: ;
                      }
                />
                <div
                  className=

                      {
                        -moz-osx-font-smoothing: grayscale;
                        -webkit-font-smoothing: antialiased;
                        color: #323130;
                        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                        font-size: 12px;
                        font-weight: 400;
                        line-height: 16px;
                        opacity: ;
                      }
                >
                  Legend 2
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Legends snapShot testing renders canSelectMultipleLegends correctly 1`] = `
<div
  className=

      {
        align-items: center;
        margin-bottom: 0;
        margin-left: -8px;
        margin-right: 0;
        margin-top: -8px;
        white-space: nowrap;
        width: 100%;
      }
>
  <div>
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <div
        data-automation-id="visibleContent"
        style={
          Object {
            "position": "fixed",
            "visibility": "hidden",
          }
        }
      >
        <div
          aria-label="Legends"
          className=
              ms-FocusZone
              &:focus {
                outline: none;
              }
          data-focuszone-id="FocusZone2"
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          role="listbox"
        >
          <div
            className=
                ms-OverflowSet
                {
                  display: flex;
                  flex-wrap: wrap;
                  justify-content: unset;
                  position: relative;
                }
            role="group"
          >
            <div
              className=
                  ms-OverflowSet-item
                  {
                    display: inherit;
                    flex-shrink: 0;
                  }
              role="none"
            >
              <button
                aria-label="Legend 1 selected"
                aria-posinset={1}
                aria-selected={false}
                aria-setsize={2}
                className=

                    {
                      align-items: center;
                      background: none;
                      border: none;
                      cursor: pointer;
                      display: flex;
                      outline: transparent;
                      padding-bottom: 8px;
                      padding-left: 8px;
                      padding-right: 8px;
                      padding-top: 8px;
                      position: relative;
                      text-transform: capitalize;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid transparent;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #605e5c;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                    @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                      outline-color: #605e5c;
                    }
                data-is-focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                role="option"
              >
                <div
                  className=

                      {
                        background-color: #e81123;
                        border-color: #e81123;
                        border: 1px solid;
                        content: ;
                        height: 12px;
                        margin-right: 8px;
                        width: 12px;
                      }
                      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                        content: linear-gradient(to right, #e81123, #e81123);
                        opacity: ;
                      }
                />
                <div
                  className=

                      {
                        -moz-osx-font-smoothing: grayscale;
                        -webkit-font-smoothing: antialiased;
                        color: #323130;
                        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                        font-size: 12px;
                        font-weight: 400;
                        line-height: 16px;
                        opacity: ;
                      }
                >
                  Legend 1
                </div>
              </button>
            </div>
            <div
              className=
                  ms-OverflowSet-item
                  {
                    display: inherit;
                    flex-shrink: 0;
                  }
              role="none"
            >
              <button
                aria-label="Legend 2 selected"
                aria-posinset={2}
                aria-selected={false}
                aria-setsize={2}
                className=

                    {
                      align-items: center;
                      background: none;
                      border: none;
                      cursor: pointer;
                      display: flex;
                      outline: transparent;
                      padding-bottom: 8px;
                      padding-left: 8px;
                      padding-right: 8px;
                      padding-top: 8px;
                      position: relative;
                      text-transform: capitalize;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid transparent;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #605e5c;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                    @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                      outline-color: #605e5c;
                    }
                data-is-focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                role="option"
              >
                <div
                  className=

                      {
                        background-color: #000000;
                        border-color: #000000;
                        border: 1px solid;
                        content: ;
                        height: 12px;
                        margin-right: 8px;
                        width: 12px;
                      }
                      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                        content: linear-gradient(to right, #000000, #000000);
                        opacity: ;
                      }
                />
                <div
                  className=

                      {
                        -moz-osx-font-smoothing: grayscale;
                        -webkit-font-smoothing: antialiased;
                        color: #323130;
                        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                        font-size: 12px;
                        font-weight: 400;
                        line-height: 16px;
                        opacity: ;
                      }
                >
                  Legend 2
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Legends snapShot testing renders styles correctly 1`] = `
<div
  className=

      {
        align-items: center;
        margin-bottom: 0;
        margin-left: -8px;
        margin-right: 0;
        margin-top: -8px;
        white-space: nowrap;
        width: 100%;
      }
>
  <div>
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <div
        data-automation-id="visibleContent"
        style={
          Object {
            "position": "fixed",
            "visibility": "hidden",
          }
        }
      >
        <div
          aria-label="Legends"
          className=
              ms-FocusZone
              &:focus {
                outline: none;
              }
          data-focuszone-id="FocusZone3"
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDownCapture={[Function]}
          role="listbox"
        >
          <div
            className=
                ms-OverflowSet
                {
                  display: flex;
                  flex-wrap: wrap;
                  justify-content: unset;
                  position: relative;
                }
            role="group"
          >
            <div
              className=
                  ms-OverflowSet-item
                  {
                    display: inherit;
                    flex-shrink: 0;
                  }
              role="none"
            >
              <button
                aria-label="Legend 1 selected"
                aria-posinset={1}
                aria-selected={false}
                aria-setsize={2}
                className=

                    {
                      align-items: center;
                      background: none;
                      border: none;
                      cursor: pointer;
                      display: flex;
                      outline: transparent;
                      padding-bottom: 8px;
                      padding-left: 8px;
                      padding-right: 8px;
                      padding-top: 8px;
                      position: relative;
                      text-transform: capitalize;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid transparent;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #605e5c;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                    @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                      outline-color: #605e5c;
                    }
                data-is-focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                role="option"
              >
                <div
                  className=

                      {
                        background-color: #e81123;
                        border-color: #e81123;
                        border: 1px solid;
                        content: ;
                        height: 12px;
                        margin-right: 8px;
                        width: 12px;
                      }
                      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                        content: linear-gradient(to right, #e81123, #e81123);
                        opacity: ;
                      }
                />
                <div
                  className=

                      {
                        -moz-osx-font-smoothing: grayscale;
                        -webkit-font-smoothing: antialiased;
                        color: #323130;
                        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                        font-size: 12px;
                        font-weight: 400;
                        line-height: 16px;
                        opacity: ;
                      }
                >
                  Legend 1
                </div>
              </button>
            </div>
            <div
              className=
                  ms-OverflowSet-item
                  {
                    display: inherit;
                    flex-shrink: 0;
                  }
              role="none"
            >
              <button
                aria-label="Legend 2 selected"
                aria-posinset={2}
                aria-selected={false}
                aria-setsize={2}
                className=

                    {
                      align-items: center;
                      background: none;
                      border: none;
                      cursor: pointer;
                      display: flex;
                      outline: transparent;
                      padding-bottom: 8px;
                      padding-left: 8px;
                      padding-right: 8px;
                      padding-top: 8px;
                      position: relative;
                      text-transform: capitalize;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid transparent;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #605e5c;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                    @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                      outline-color: #605e5c;
                    }
                data-is-focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                role="option"
              >
                <div
                  className=

                      {
                        background-color: #000000;
                        border-color: #000000;
                        border: 1px solid;
                        content: ;
                        height: 12px;
                        margin-right: 8px;
                        width: 12px;
                      }
                      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                        content: linear-gradient(to right, #000000, #000000);
                        opacity: ;
                      }
                />
                <div
                  className=

                      {
                        -moz-osx-font-smoothing: grayscale;
                        -webkit-font-smoothing: antialiased;
                        color: #323130;
                        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                        font-size: 12px;
                        font-weight: 400;
                        line-height: 16px;
                        opacity: ;
                      }
                >
                  Legend 2
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
